fix: fixed headline sizes mobile and removed no wrap

--- a/src/app/imprint/legal-notice/legal-notice.scss
+++ b/src/app/imprint/legal-notice/legal-notice.scss
@@ -48,10 +48,6 @@
   }
 }
 
-h1 {
-  white-space: nowrap;
-}
-
 section {
   margin-bottom: 28px;
 }
