--- a/src/app/imprint/privacy-policy/privacy-policy.scss
+++ b/src/app/imprint/privacy-policy/privacy-policy.scss
@@ -55,10 +55,6 @@
   }
 }
 
-h1 {
-  white-space: nowrap;
-}
-
 section {
   margin-bottom: 28px;
 }
